jclass/snapshots/runtime-classes-basic_dynamic_dispatch-BasicDynamicDispatchMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class classes.basic_dynamic_dispatch.BasicDynamicDispatchMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #13                      //classes/basic_dynamic_dispatch/BasicDynamicDispatchMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = String             #8               // java.version
   #8 = Utf8               java.version
   #9 = Methodref          #2.#10           // java/lang/Object.hashCode:()I
  #10 = NameAndType        #11:#12          // hashCode:()I
  #11 = Utf8               hashCode
  #12 = Utf8               ()I
  #13 = Class              #14              // classes/basic_dynamic_dispatch/BasicDynamicDispatchMain
  #14 = Utf8               classes/basic_dynamic_dispatch/BasicDynamicDispatchMain
  #15 = Utf8               Code
  #16 = Utf8               LineNumberTable
  #17 = Utf8               LocalVariableTable
  #18 = Utf8               this
  #19 = Utf8               Lclasses/basic_dynamic_dispatch/BasicDynamicDispatchMain;
  #20 = Utf8               main
  #21 = Utf8               ([Ljava/lang/String;)V
  #22 = Utf8               args
  #23 = Utf8               [Ljava/lang/String;
  #24 = Utf8               o
  #25 = Utf8               Ljava/lang/Object;
  #26 = Utf8               hash
  #27 = Utf8               I
  #28 = Utf8               SourceFile
  #29 = Utf8               BasicDynamicDispatchMain.java
{
  public classes.basic_dynamic_dispatch.BasicDynamicDispatchMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 9: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lclasses/basic_dynamic_dispatch/BasicDynamicDispatchMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=1, locals=3, args_size=1
         0: ldc           #7                  // String java.version
         2: astore_1                
         3: aload_1                 
         4: invokevirtual #9                  // Method java/lang/Object.hashCode:()I
         7: istore_2                
         8: return                  
      LineNumberTable:
        line 11: 0
        line 12: 3
        line 13: 8
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  args   [Ljava/lang/String;
           3        6     1  o      Ljava/lang/Object;
           8        1     2  hash   I
}
SourceFile: "BasicDynamicDispatchMain.java"
