jclass/snapshots/runtime-classes-default_fields_values-InstanceDefaultValuesMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class classes.default_fields_values.InstanceDefaultValuesMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #10                      //classes/default_fields_values/InstanceDefaultValuesMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields
   #8 = Utf8               classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields
   #9 = Methodref          #7.#3            // classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields."<init>":()V
  #10 = Class              #11              // classes/default_fields_values/InstanceDefaultValuesMain
  #11 = Utf8               classes/default_fields_values/InstanceDefaultValuesMain
  #12 = Utf8               Code
  #13 = Utf8               LineNumberTable
  #14 = Utf8               LocalVariableTable
  #15 = Utf8               this
  #16 = Utf8               Lclasses/default_fields_values/InstanceDefaultValuesMain;
  #17 = Utf8               main
  #18 = Utf8               ([Ljava/lang/String;)V
  #19 = Utf8               args
  #20 = Utf8               [Ljava/lang/String;
  #21 = Utf8               classWithFields
  #22 = Utf8               Lclasses/default_fields_values/InstanceDefaultValuesMain$ClassWithFields;
  #23 = Utf8               SourceFile
  #24 = Utf8               InstanceDefaultValuesMain.java
  #25 = Utf8               NestMembers
  #26 = Utf8               InnerClasses
  #27 = Utf8               ClassWithFields
{
  public classes.default_fields_values.InstanceDefaultValuesMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lclasses/default_fields_values/InstanceDefaultValuesMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=2, locals=2, args_size=1
         0: new           #7                  // class classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields
         3: dup                     
         4: invokespecial #9                  // Method classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields."<init>":()V
         7: astore_1                
         8: return                  
      LineNumberTable:
        line 22: 0
        line 23: 8
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  args   [Ljava/lang/String;
           8        1     1  classWithFields Lclasses/default_fields_values/InstanceDefaultValuesMain$ClassWithFields;
}
SourceFile: "InstanceDefaultValuesMain.java"
NestMembers:
  classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields
InnerClasses:
  static #27= #7 of #10;                      // ClassWithFields=class classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields of class classes/default_fields_values/InstanceDefaultValuesMain
