jclass/snapshots/runtime-classes-get_primitive_array_class_name-GetPrimitiveArrayClassNameMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class classes.get_primitive_array_class_name.GetPrimitiveArrayClassNameMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #17                      //classes/get_primitive_array_class_name/GetPrimitiveArrayClassNameMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #2.#8            // java/lang/Object.getClass:()Ljava/lang/Class;
   #8 = NameAndType        #9:#10           // getClass:()Ljava/lang/Class;
   #9 = Utf8               getClass
  #10 = Utf8               ()Ljava/lang/Class;
  #11 = Methodref          #12.#13          // java/lang/Class.getName:()Ljava/lang/String;
  #12 = Class              #14              // java/lang/Class
  #13 = NameAndType        #15:#16          // getName:()Ljava/lang/String;
  #14 = Utf8               java/lang/Class
  #15 = Utf8               getName
  #16 = Utf8               ()Ljava/lang/String;
  #17 = Class              #18              // classes/get_primitive_array_class_name/GetPrimitiveArrayClassNameMain
  #18 = Utf8               classes/get_primitive_array_class_name/GetPrimitiveArrayClassNameMain
  #19 = Utf8               Code
  #20 = Utf8               LineNumberTable
  #21 = Utf8               LocalVariableTable
  #22 = Utf8               this
  #23 = Utf8               Lclasses/get_primitive_array_class_name/GetPrimitiveArrayClassNameMain;
  #24 = Utf8               main
  #25 = Utf8               ([Ljava/lang/String;)V
  #26 = Utf8               args
  #27 = Utf8               [Ljava/lang/String;
  #28 = Utf8               a
  #29 = Utf8               [I
  #30 = Utf8               name
  #31 = Utf8               Ljava/lang/String;
  #32 = Utf8               SourceFile
  #33 = Utf8               GetPrimitiveArrayClassNameMain.java
{
  public classes.get_primitive_array_class_name.GetPrimitiveArrayClassNameMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lclasses/get_primitive_array_class_name/GetPrimitiveArrayClassNameMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=1, locals=3, args_size=1
         0: iconst_1                
         1: newarray      int               
         3: astore_1                
         4: aload_1                 
         5: invokevirtual #7                  // Method java/lang/Object.getClass:()Ljava/lang/Class;
         8: invokevirtual #11                 // Method java/lang/Class.getName:()Ljava/lang/String;
        11: astore_2                
        12: return                  
      LineNumberTable:
        line 5: 0
        line 6: 4
        line 7: 12
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       13     0  args   [Ljava/lang/String;
           4        9     1  a      [I
          12        1     2  name   Ljava/lang/String;
}
SourceFile: "GetPrimitiveArrayClassNameMain.java"
